2008-02-27  Tom Tromey  <tromey@redhat.com>

	* Makefile.in (c-format.o): Depend on gt-c-format.h.
	* c-format.c (struct format_state): Mark with GTY.
	(global_format_state): Likewise.
	(construct_format_state): Allocate global_format_state via GC.
	(c_format_finalize): Don't free global_format_state.
	Include gt-c-format.h.
	(init_dynamic_diag_info): Use global diag_t, not '&t'.
	* c-config-lang.in (gtfiles): Add c-format.h, c-format.c.

2008-02-25  Tom Tromey  <tromey@redhat.com>

	* c-common.c (handle_alias_attribute): Handle error_mark_node as
	function's DECL_INITIAL.
	(handle_no_instrument_function_attribute): Likewise.
	(handle_no_limit_stack_attribute): Likewise.

2008-02-21  Tom Tromey  <tromey@redhat.com>

	* c-gimplify.c (c_gimplify_expr) <VIEW_CONVERT_EXPR>: Update
	assertion.
	* c-decl.c (all_global_decls): New global.
	(pop_scope_internal): New function.
	(pop_scope): Use it.
	(pop_file_scope): Initialize all_global_decls.  Use
	pop_scope_internal.
	(c_clear_binding_stack): Use pop_scope_internal.
	(ext_block): Remove.
	(c_smash_decls): Change type of 'result'.  Remove 'list'
	argument; add 'globals' argument.  Smash field types of records
	and unions.
	(get_smashed_type): Don't smash field types of records and
	unions.
	(hand_off_decls): Walk DECL_ARGUMENTS of function.
	(c_write_global_declarations): Use all_global_decls.
	(c_init_decl_processing): Initialize all_global_decls.
	* c-parser.c (struct can_reuse_hunk_data) <parser>: Remove.
	(traverse_check_statics): New function.
	(can_reuse_hunk): Call traverse_check_statics.

2008-02-18  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_hack_token): Pop timevar in early return.

2008-02-15  Tom Tromey  <tromey@redhat.com>

	* c-decl.c (get_smashed_type): Don't mix declaration with code.
	(duplicate_decls): Apply attributes to new decl.

2008-02-13  Tom Tromey  <tromey@redhat.com>

	* c-parser.c: Include pointer-set.h.
	(c_parser) <smash_map>: Removed.
	(global_smash_map): New global.